# insightface

recognition/arcface_torch/: eval_ijbc.py  losses.py  onnx_helper.py  partial_fc_v2.py  pyproject.toml  train_v2.py
recognition/arcface_torch/backbones/: iresnet.py  iresnet2060.py  vit.py
recognition/arcface_torch/configs/: umdfaces_r100.py  umdfaces_r50.py
recognition/arcface_torch/eval/: verification.py
recognition/arcface_torch/utils/: utils_callbacks.py  utils_config.py
