[project]
name = "arcface-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12,>=3.7.0"
dependencies = [
    "easydict>=1.13",
    "mxnet>=1.9.1",
    "onnx>=1.14.1",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.0.2",
    "torch==1.13.1",
]
